migrate commons library usages to spring, flatten model/util to util